# flibrary-mac

./: .gitmodules  CMakeLists.txt  README.md  backtrace.sh  build-mac.sh  run_with_core.sh
.cursor/rules/: debug-export-epub.mdc  no-commit-trailers.mdc  prefer-events-over-timers.mdc  source-file-size.mdc
cmake/: copy_bundle_libs.cmake  copy_data_files.cmake  fixup_bundle.cmake  make_icns.sh  run_macdeployqt.sh
src/ext/bit7z/src/internal/: extractcallback.hpp
src/ext/foundation/: Constant.h
src/ext/foundation/platform/: PlatformUtil.h  platform.cmake
src/ext/foundation/platform/Darwin/: DyLib.cpp  FileUtil.cpp  PlatformUtil.cpp  StrUtil.cpp
src/ext/foundation/platform/Linux/: PlatformUtil.cpp
src/ext/foundation/platform/Windows/: PlatformUtil.cpp
src/ext/foundation/platformgui/: NativeUi.h  platformgui.cmake
src/ext/foundation/platformgui/Darwin/: NativeUi.mm
src/ext/foundation/platformgui/Windows/: NativeUi.cpp
src/ext/foundation/util/: DiskCache.cpp  DiskCache.h  DiskCacheData.cpp  EpubBooksPack.cpp  EpubBooksPack.h  EpubZipPack.cpp  EpubZipPack.h  Fb2EpubConverter.cpp  Fb2EpubConverter.h  Fb2EpubImages.h  Fb2EpubMeta.h  Fb2EpubMetaParse.cpp  Fb2EpubMetaParse.h  Fb2EpubNav.cpp  Fb2EpubNav.h  Fb2EpubOpf.cpp  Fb2EpubParser.cpp  Fb2EpubParser.h  Fb2EpubParserBody.cpp  Fb2EpubParserBodyExtra.cpp  Fb2EpubParserBodyStart.cpp  Fb2EpubParserEnd.cpp  Fb2EpubParserFootnotes.cpp  Fb2EpubParserImages.cpp  Fb2EpubParserImpl.h  Fb2EpubParserMetaEnd.cpp  Fb2EpubParserMetaStart.cpp  Fb2EpubParserStart.cpp  Fb2EpubText.cpp  Fb2EpubText.h  Fb2EpubWriter.cpp  Fb2EpubWriter.h  Fb2Format.cpp  Fb2Format.h  FunctorExecutionForwarder.cpp  FunctorExecutionForwarder.h  ImageRestore.cpp  ImageRestore.h  LICENSE-Fb2Epub.txt  SortString.cpp  (+2 more)
src/ext/foundation/util/platform/Darwin/: ProcessWrapper.cpp
src/ext/foundation/utilgui/: ScrollBarController.cpp
src/ext/foundation/zip/: EpubPack.cpp  zip.cmake  zip.h
src/ext/foundation/zip/impl/: SevenZipLib.cpp  SevenZipLib.h  archive.cpp
src/ext/scripts/cmake/: conan.cmake  sdk.cmake  target.cmake
src/ext/scripts/conan/profiles/: apple_clang_arm64_Debug  apple_clang_arm64_Release  gcc_x86_64_Debug  gcc_x86_64_RelWithDebInfo  gcc_x86_64_Release
src/ext/scripts/helpers/: version.h.in  win_resources.rc.in
src/home/flibrary/app/: FlibraryApplication.cpp  FlibraryApplication.h  Info.plist.in  app.cmake  main.cpp
src/home/flibrary/app/resources/: app.qrc  style-macos.qss  style.qss
src/home/flibrary/gui/: AnnotationCoverLayout.cpp  AnnotationCoverLayout.h  AnnotationWidget.cpp  AnnotationWidget.ui  BooksHeaderLayout.cpp  BooksHeaderLayout.h  LocaleController.cpp  LocaleController.h  MainWindow.cpp  MainWindow.h  MainWindowSearchBar.cpp  MainWindowSearchBar.h  MainWindowThemeMenu.cpp  MainWindowThemeMenu.h  StatusBarLogAppender.cpp  StatusBarLogAppender.h  TreeView.cpp  TreeView.h  TreeViewContextMenu.cpp  TreeViewContextMenu.h  gui.cmake
src/home/flibrary/gui/StyleApplier/: PluginStyleApplier.cpp
src/home/flibrary/gui/widgets/: ModeLineEdit.cpp  ModeLineEdit.h
src/home/flibrary/icons/: icons.qrc
src/home/flibrary/interface/: Stub.cpp  localization.cpp  localization.h
src/home/flibrary/interface/constants/: Enums.h  ExportStat.h  Localization.h
src/home/flibrary/interface/logic/: IAnnotationController.h  IDataProvider.h  INavigationQueryExecutor.h  ISingleInstanceController.h  ITreeViewController.h
src/home/flibrary/interface/ui/: IStyleApplier.h
src/home/flibrary/logic/: LogicFactory.cpp  di_logic.cpp  logic.cmake
src/home/flibrary/logic/Annotation/: AnnotationBookCache.cpp  AnnotationBookCache.h  AnnotationCacheCodec.cpp  AnnotationCacheCodec.h  AnnotationCacheCodecDb.cpp  AnnotationCacheCodecItem.cpp  AnnotationCacheCodecItem.h  AnnotationController.cpp  AnnotationController.h  AnnotationControllerFormat.cpp  AnnotationControllerFormat.h  AnnotationControllerJoke.cpp  AnnotationControllerJoke.h  AnnotationDbLoader.cpp  AnnotationDbLoader.h  AnnotationDbReviews.cpp  AnnotationDbReviews.h  ArchiveDescriptionFallback.cpp  ArchiveDescriptionFallback.h  ArchiveParser.cpp
src/home/flibrary/logic/ChangeNavigationController/: GroupController.cpp  SearchController.cpp
src/home/flibrary/logic/TreeViewController/: AbstractTreeViewController.cpp  AbstractTreeViewController.h  TreeViewControllerBooks.cpp  TreeViewControllerBooks.h  TreeViewControllerNavigation.cpp  TreeViewControllerNavigation.h
src/home/flibrary/logic/data/: BooksTreeGenerator.cpp  DataProvider.cpp  DataProvider.h  NavigationQueryExecutor.cpp  NavigationQueryExecutor.h
src/home/flibrary/logic/database/: DatabaseUser.cpp  DatabaseUtil.cpp  DatabaseUtil.h
src/home/flibrary/logic/extract/: BooksExtractor.cpp  BooksExtractor.h  BooksExtractorWrite.cpp  BooksExtractorWrite.h
src/home/flibrary/logic/model/: BaseModel.cpp  BaseModelData.cpp  LanguageModel.cpp
src/home/flibrary/logic/shared/: BookInteractor.cpp  BooksContextMenuExport.cpp  BooksContextMenuExport.h  BooksContextMenuProvider.cpp  ProgressController.cpp  ReaderController.cpp  ReaderExtract.cpp  ReaderExtract.h  ReaderLaunch.cpp  ReaderLaunch.h  ReaderOpenPath.cpp  ReaderOpenPath.h  SingleInstanceController.cpp
src/home/flibrary/util/: Fb2EpubConverter.h  Fb2Format.h
src/home/flibrary/version/: build.h
src/home/gutil/: Dialog.cpp
src/home/gutil/interface/: IDialog.h  IUiFactory.h
src/home/inpx/: inpx.cpp
src/home/resources/locales/: CMakeLists.txt  check_locales.py  en.ts  eo.ts  ru.ts  tok.ts  uk.ts
src/home/script/cmake/: pack.cmake
src/home/tool/opds/: main.cpp
src/home/tool/opds/requester/: ReactAppRequester.cpp  Requester.cpp
tests/: fb2_epub_test.cpp  fb2_epub_test_checks.cpp  fb2_epub_test_checks.h
tests/fixtures/: chapter_title.fb2  drop_cap.fb2  emphasis_paren_spacing.fb2  fb2_conversion_next.fb2  fb2_elements.fb2  fb2_metadata.fb2  footnote_after_sentence.fb2  footnote_emphasis.fb2  footnote_punct_spacing.fb2  inline_image.fb2  inline_word_boundary.fb2  poem.fb2  sample.fb2  special_title.fb2  warning_spacing.fb2
(+1 files in other folders)
